Fixed contrast error

--- a/lesson9/css/main.css
+++ b/lesson9/css/main.css
@@ -238,7 +238,7 @@ footer a {
   text-align: center;
 }
 .footer-bar a{
-  color: #ffffff;
+  color: #000000;
 }
 
 .hidden {
